# project_manager

./: CMakeLists.txt  TODO  usage.md
.proj_config/: project_config.json
config/: install_project_manager.sh  package.sh  project_path.json  update_bin.sh
config/install_struc/: readme.txt
config/project_manager/: project_config.json  project_path.json
config/project_manager/local/: ProjectAssociatedFile.json
config/project_manager/tmp/: hello_world_sdk.h  main.cc  project_config.json
config/project_manager/tmp/cmake/: CMakeLists_TOP.txt
config/project_manager/tmp/cmake/inc/: build_tree.h  rwfile.h
config/project_manager/tmp/cmake/main/: main.cc
config/project_manager/tmp/cmake/src/: bit_operation.cc  build_tree.cc  compress.cc  compress_extract.cc
config/project_manager/tmp/hello/: .hello.h.swp
inc/: cmake.h  exe_shell.h  project.h  project_window.h  system_utils.h  window.h
main/: CMakeLists.txt  Test_ncurses.cc  Test_project_window.cc  main.cc
script/: create_project.sh
src/: CMakeLists.txt  cmake.cc  exe_shell.cc  generate_cmake.cc  project.cc  project_window.cc
src/proj/: proj.cc  proj.h  proj_config.cc  proj_config.h  proj_dir.cc  proj_dir.h
